crates/mp-tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_search_form_filled.snap
---
source: crates/mp-tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |
01 |
02 |
03 |      ╭ Server Search (All) ─────────────────────────────────────────────────────────────────────────────────────╮
04 |      │ Search In: Current Mailbox                                                                               │
05 |      │      From: boss@corp.com                                                                                 │
06 |      │        To:                                                                                               │
07 |      │   Subject: budget                                                                                        │
08 |      │  Keywords: invoice OR receipt█                                                                           │
09 |      │     After: 2026-01-01                                                                                    │
10 |      │    Before: 2026-07-01                                                                                    │
11 |      │Attachment: [x] has attachment                                                                            │
12 |      │  Advanced: from:x (a OR b) has:attachment …                                                              │
13 |      │  No results                                                                                              │
14 |      │                                                                                                          │
15 |      │                                                                                                          │
16 |      │                                                                                                          │
17 |      │                                                                                                          │
18 |      │                                                                                                          │
19 |      │                                                                                                          │
20 |      │                                                                                                          │
21 |      │                                                                                                          │
22 |      │                                                                                                          │
23 |      │                                                                                                          │
24 |      │                                                                                                          │
25 |      │                                                                                                          │
26 |      │                                                                                                          │
27 |      │                                                                                                          │
28 |      │                                                                                                          │
29 |      │                                                                                                          │
30 |      │                                                                                                          │
31 |      │                                                                                                          │
32 |      │                                                                                                          │
33 |      │                                                                                                          │
34 |      │                                                                                                          │
35 |      │                                                                                                          │
36 |      ╰─────────────────── Tab/Shift+Tab: fields | Space: toggle | Enter: search | Esc: close ───────────────────╯
37 |
38 |
39 |
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
08 |bold@7..19
